# reus

./: .gitignore  Changelog.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
data/: teams.json
docs/: .buildinfo  fbref.html  fotmob.html  functions.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  transfermarkt.html  utils.html
docs/.doctrees/: environment.pickle  functions.doctree  index.doctree  modules.doctree
docs/_sources/: fbref.rst.txt  fotmob.rst.txt  functions.rst.txt  index.rst.txt  modules.rst.txt  transfermarkt.rst.txt  utils.rst.txt
docs/source/: conf.py  fbref.rst  fotmob.rst  functions.rst  index.rst  utils.rst
reus/: __init__.py  teams.py  util.py
reus/fbref/: __init__.py  fb_league_table.py  fb_match_data.py  fb_match_defensive_actions_stats.py  fb_match_keeper_stats.py  fb_match_lineups.py  fb_match_metadata.py  fb_match_misc_stats.py  fb_match_passing_stats.py  fb_match_passing_type_stats.py  fb_match_possession_stats.py  fb_match_shots.py  fb_match_summary.py  fb_match_summary_stats.py  fb_match_team_stats.py  fb_match_urls.py  fb_player_match_logs_data.py  fb_player_match_logs_defensive_actions.py  fb_player_match_logs_gca_sca.py  fb_player_match_logs_misc.py  fb_player_match_logs_passing.py  fb_player_match_logs_passing_type.py  fb_player_match_logs_possession.py  fb_player_match_logs_summary.py  fb_player_scouting_report.py  fb_season_fixture_urls.py  fb_season_urls.py  fb_team_advanced_keeper_stats.py  fb_team_data.py  fb_team_goal_sca_stats.py  (+22 more)
(+80 files in other folders)
