[tool.poetry]
name = "reus"
version = "1.1.7"
description = "A package that allows you to pull soccer statistics, player market values, and transfer information, primarily from FBref, Fotmob, and Transfermarkt"
authors = ["ian-shepherd <ian.shepherd123@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.4"
requests = "^2.23.0"
beautifulsoup4 = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
